fixed footer on mobile

--- a/assets/stylesheets/_layout.scss
+++ b/assets/stylesheets/_layout.scss
@@ -140,16 +140,15 @@ footer {
 
   .info {
     @include grid-column(12);
-    margin: 2em 0 0 0;
+    margin: 1em 0 0 0;
     text-align: center;
   }
 
   .legal-links {
     @include grid-column(12);
-    margin: 1em 0 2em 0;
     text-align: center;
     font-size: 0.75em;
-
+    margin: 0;
     li {
       list-style-type: none;
       display: inline-block;
@@ -160,6 +159,16 @@ footer {
     }
     li:last-child:after {
       content: "";
+    }
+  }
+}
+@media #{$medium-up} {
+  footer {
+    .info {
+      margin: 2em 0 0 0;
+    }
+    .legal-links {
+      margin: 1em 0 2em 0;
     }
   }
 }
